# ProyectoTiempoReal

canasta/: .cproject  .mxproject  .project  canasta Debug.launch  canasta.ioc
canasta/Core/Inc/: main.h  stm32f4xx_it.h
canasta/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
canasta/Debug/: makefile
canasta/Debug/Core/Src/: subdir.mk
canasta/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
program/: .gitignore  Makefile  meson.build  program
program/include/: buffer.h  interface.h  logger.h  program.h  serial.h  tty.h
program/src/: buffer.c  interface.c  logger.c  program.c  serial.c  tty.c
